--- a/fundamentos/secao-03-introducao-a-html-e-css/estilo.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/estilo.css
@@ -1,8 +1,10 @@
-body{
+body {
     margin: 0;
     padding: 0;
     background-color: #B17CB9;
-    font-size: large;
+    font-size: 20px;
     font-style: italic;
     text-align: center;
+    font-size: 25px;   
 }
+
