--- a/fundamentos/secao-03-introducao-a-html-e-css/combinações-e-classesDescendents/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/combinações-e-classesDescendents/style.css
@@ -22,7 +22,7 @@ li{
     font-size: 20px;
 }
 li em{
-    font-weight: bolder;
+    font-weight: bold;
 }
 .os3{
     color: blue;
@@ -34,6 +34,20 @@ a:hover{
     font-weight: bold;
 }
 
+li:nth-of-type(1n+2) a:nth-child(1):hover {
+    font-weight: bold;
+    color: green;
+  }
+  
+  li:nth-of-type(3) a:nth-child(1):hover {
+    font-weight: bold;
+    color: black;
+  }
+  
+  li:nth-of-type(4) a:nth-child(1):hover {
+    font-weight: bold;
+    color: yellow;
+  }
     
 
 
