--- a/fundamentos/secao-03-introducao-a-html-e-css/html semântico/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/html semântico/style.css
@@ -1,14 +1,26 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+body {
+    background: rgb(27,101,13);
+    background: linear-gradient(278deg, rgba(27,101,13,1) 0%, rgba(115,64,15,1) 69%);
+    
 }
 
-header, h1, nav{
+header{
+    height: 70px;
+    padding: 2px;
+    align-items: center;
+    background: rgb(27,101,13);
+    background: linear-gradient(278deg, rgba(27,101,13,1) 0%, rgba(115,64,15,1) 69%);
+    border-bottom: 0.1px solid rgba(69, 35, 10, 0.839);
+    box-shadow: 0px 5px 20px #000;
     display: flex;
-    justify-content: space-between;
-    padding: 4px;
-    background-color: rgb(83, 115, 28);
-    font-size: 25px; 
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .menu, li, a{
     display: flex;
@@ -16,4 +28,5 @@ header, h1, nav{
     padding: 5px;
     font-size: 20px;
     color: black;
+    
 }
