--- a/fundamentos/secao-03-introducao-a-html-e-css/html semântico/style.css
+++ b/fundamentos/secao-03-introducao-a-html-e-css/html semântico/style.css
@@ -3,10 +3,11 @@
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
+    color: black;
 }
 body {
     background: rgb(27,101,13);
-    background: linear-gradient(278deg, rgba(27,101,13,1) 0%, rgba(115,64,15,1) 69%);
+    background: linear-gradient(278deg, rgb(31, 156, 179) 0%, #E5D6C7 69%);;
     
 }
 
@@ -15,7 +16,7 @@ header{
     padding: 2px;
     align-items: center;
     background: rgb(27,101,13);
-    background: linear-gradient(278deg, rgba(27,101,13,1) 0%, rgba(115,64,15,1) 69%);
+    background: linear-gradient(278deg, rgb(31, 156, 179) 0%, #E5D6C7  69%);
     border-bottom: 0.1px solid rgba(69, 35, 10, 0.839);
     box-shadow: 0px 5px 20px #000;
     display: flex;
@@ -25,8 +26,53 @@ header{
 .menu, li, a{
     display: flex;
     text-decoration: none;
-    padding: 5px;
+    padding: 1px;
     font-size: 20px;
-    color: black;
+    color: #fff);  
+}
+.artigo{
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.infos{
+    padding: 10px;
+    text-align: center;
+}
+main{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    text-align: center;
+}
+.curiosidade {
+    margin: 10px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
     
+}
+
+p, h3{
+    display: block;
+    flex-wrap: wrap;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+img{
+    border-radius: 10px;
+    box-shadow: 0px 6px 20px #000; 
+} 
+
+.referencias, ul, li{
+   
+    align-items: center;
+    padding: 10px;
+    text-align: center;
+}
+
+footer{
+    text-align: center;
 }
